add new twd money

--- a/config/deposit_channels.yml
+++ b/config/deposit_channels.yml
@@ -6,6 +6,6 @@
   max_confirm: 3
 - id: 400
   key: bank
-  currency: cny
+  currency: twd
   sort_order: 2
   banks: ["icbc", "cbc", "bc", "bcm", "abc", "cmb", "cmbc", "cncb", "hxb", "cib", "spdb", "bob", "cncb", "ceb", "sdb", "pab", "gdb"]
